--- a/assets/style.css
+++ b/assets/style.css
@@ -2,19 +2,33 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-    margin: 5rem 0 !important;
-    padding: 0 !important;
+div {
+    margin: 0 auto;
 }
 
 .header {
+    padding: 1.75rem 0;
     width: 100%;
     height: 5rem;
     background-color: #1a468e;
-    color: #fff;
     position: fixed;
     top: 0;
     z-index: 99;
+}
+.header h1 {
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: bold;
+    transform: translateX(-4.75rem);
+}
+
+h2 {
+    font-weight: bold !important;
+}
+
+.content {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 .navbar {
@@ -26,23 +40,34 @@ body {
     z-index: 99 !important;
 }
 
+.nav-item {
+    padding: 0 2rem !important;
+}
+
 .nav-link {
     font-weight: bold;
-    color: #667f99 !important;
+    /* color: #667f99 !important; */
+    color: #ccc !important;
 }
 .nav-link:hover {
     color: #fff !important;
 }
 
 .btn-primary {
+    width: 100% !important;
     border: #004388 !important;
-    border-radius: 0 !important;
+    border-radius: 10rem !important;
     background-color: #004388 !important;
     transition: all .2s;
 }
 .btn-primary:hover {
     border: #00a6e2 !important;
     background-color: #00a6e2 !important;
+}
+
+.mapboxgl-canvas {
+    width: calc(972px - 5rem);
+    height: calc(675px - 5rem);
 }
 
 .badge {
@@ -63,4 +88,24 @@ body {
     background-color: #004388 !important;
     border: #004388 !important;
     color: #fff !important;
+}
+
+.vehicle-container {
+    margin-top: 7rem !important;
+}
+
+.location-container {
+    background-color: #f6c662;
+}
+
+#leaderboard {
+    margin-bottom: 8rem !important;
+}
+
+.qr-container {
+    background-color: #f6c662;
+}
+.qr-code {
+    height: 12rem;
+    display: none;
 }
